[package]
name = "datafusion-hdfs-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ballista = { path = "../../arrow-ballista/ballista/rust/client", features = ["standalone"] }
datafusion = { path = "../../arrow-datafusion-pivot/datafusion/core", features = ["hdfs"] }
objectstore-hdfs-testing = { path = "../hdfs-testing"}
futures = "0.3"
num_cpus = "1.13.0"
prost = "0.10"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
tonic = "0.7"